--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "restaurant",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
-  }
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Moiz-I/restaurant.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Moiz-I/restaurant/issues"
+  },
+  "homepage": "https://github.com/Moiz-I/restaurant#readme",
+  "description": ""
 }
